--- a/HomeList.css
+++ b/HomeList.css
@@ -156,6 +156,9 @@ td input{
     font-size: 21px;
     
 }
+.Setting_table_inside{
+  border: 2px solid #ffffff;
+}
 #colour1{
     color: hwb(0 100% 0%);
     background-color: transparent;
