--- a/SearchList.css
+++ b/SearchList.css
@@ -99,21 +99,222 @@ header{
         }
         
     }
-    .container_main{
-        width: 100%;
-        background-color: #f4f4f4;
-        height: 120px;
-    }
-.tabel_container{
-   margin-right: 10px;
-    margin-left: 10px;
-}
-table{
-    margin-left: 75px;
-    margin-right: 75px;
-    margin-top: 25px;
-}
-td{
-    color: #4cb1c3;
+    /* ///////////////Result PAge///////////// */
+    #options_of_result {
+      display: flex;
+      justify-content: space-between;
+      padding: 20px;
+  }
+
+  .Search_container {
+      width: 100%;
+  }
+
+  .Search_container input[type="checkbox"] {
+      margin-right: 5px;
+  }
+
+  .Search_container select,
+  .Search_container input[type="text"],
+  .Search_container input[type="submit"] {
+      width: 100%;
+      padding: 8px;
+      box-sizing: border-box;
+  }
+
+
+
+    input[type="checkbox"] {
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      width: 16px;
+      height: 16px;
+      border: 2px solid #4cb1c3;
+      border-radius: 3px;
+      outline: none;
+      cursor: pointer;
+      vertical-align: middle;
+      margin-right: 8px;
+  }
+
+  input[type="checkbox"]:checked {
+      background-color: #4cb1c3;
+      border-color: #4cb1c3;
+  }
+
+
+/*////////////Main Of Search page Start Here//////////////  */
+.srch_result {
+    margin-top: 12px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 60px;
+    margin-left: 61px;
+  }
+  
+  .result329 h6,
+  .sortby h6 {
+    font-size: 14px;
+    font-weight: 400;
+  }
+  
+  .sortby {
+    display: flex;
+    align-items: center;
+  }
+  
+  .relavancy select {
+    font-size: 14px;
+  }
+  .grid-container {
+    margin-right: 50px;
+    margin-left: 50px;
+    margin-top: 12px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+    row-gap: 4px;
+    column-gap: 40px;
+    overflow-x: hidden;
+  }
+  .grid-item {
+    text-align: center;
+  
+  }
+  .image_with_text {
+    position: relative;
+    text-align: center;
+    color: white;
+  }
+  .top-left {
+    position: absolute;
+    top: 8px;
+    left: 16px;
+  }
+  .top-left h6{
+    font-size: 12px;
+    color: #d94f5a;
+    border: 2px solid #ffffff;
+    padding-top: 3px;
+    padding-left: 2px;
+    padding-bottom: 3px;
+    padding-right: 2px;
+    margin-left: -5px;
+    border-radius: 3px;
+    font-weight: 200;
+    background-color: #fff;
+    opacity: 0.7;
+    text-transform: uppercase;
+  }
+
+  .image_with_text img {
+    max-width: 100%;
+    width: 450px;
+    height: auto;
+  }
+  
+  .grid-item h5 {
     float: left;
-}
+  }
+  
+  .volunteer_lg {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+  }
+
+  .bottom_design {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  .logo-and-text {
+    display: flex;
+    align-items: center; 
+    margin-bottom: 5px; 
+  }
+
+  .bottom_design {
+    margin-left: 0;
+  }
+  
+  .bottom_design h5 {
+    font-size: 14px;
+  }
+  
+  .bottom_design h6 {
+    font-size: 12px;
+  }  
+  /* Styles for smaller screens */
+  @media only screen and (max-width: 768px) {
+    .grid-container {
+      grid-template-columns: auto auto;
+      column-gap: 20px;
+      margin-right: 20px;
+      margin-left: 20px;
+    }
+  
+    .image_with_text img {
+      width: 100%;
+      height: auto;
+    }
+  }
+  
+  /* Additional styles for even smaller screens */
+  @media only screen and (max-width: 480px) {
+    .grid-container {
+      grid-template-columns: auto;
+      column-gap: 10px;
+      margin-right: 10px;
+      margin-left: 10px;
+    }
+  }
+  @media only screen and (min-width: 1552px) {
+    .image_with_text img {
+        max-width: 150%;
+        width: 500px;
+        height: auto;
+      }
+  } 
+  @media only screen and (min-width: 1730px) {
+    .image_with_text img {
+        max-width: 150%;
+        width: 550px;
+        height: auto;
+      }
+  } 
+
+  .footer_main{
+    display: flex;
+    width: 100vw;
+    height: 80px;
+    background-color: rgb(69 72 72);
+    justify-content: space-between;
+    align-items: center;
+  }
+  .text_fot{
+    display: flex;
+    margin-right: 50px;
+  }
+  .logo_fot img{
+    margin-left: 50px;
+    width: 120px;
+  }
+  .contact_us_fot > h4, .faq >h4{
+    font-size: 16px;
+    padding-left: 30px;
+    color: #ffffff;
+  }
+  /* Remove Footer Of Site */
+  @media  only screen and (max-width: 760px){
+  footer{
+    display: none;
+  }
+} 
+  
+ 
+  
+/*////////////Main Of Search page Start Here//////////////  */
