--- a/SearchList.css
+++ b/SearchList.css
@@ -32,7 +32,7 @@ header{
     .rightsection h4 a:hover{
         text-decoration: none;
         color: #d94f5a;
-        font-size: 20px;
+
         background-color: #fff;
     }
     .header_container{
@@ -212,7 +212,7 @@ header{
   .image_with_text img {
     max-width: 100%;
     width: 450px;
-    height: auto;
+    height: 280px;
   }
   
   .grid-item h5 {
@@ -259,7 +259,7 @@ header{
   
     .image_with_text img {
       width: 100%;
-      height: auto;
+      height: 280px;
     }
   }
   
@@ -276,20 +276,20 @@ header{
     .image_with_text img {
         max-width: 150%;
         width: 500px;
-        height: auto;
+        height: 280px;
       }
   } 
   @media only screen and (min-width: 1730px) {
     .image_with_text img {
         max-width: 150%;
         width: 550px;
-        height: auto;
+        height: 280px;
       }
   } 
 
   .footer_main{
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 80px;
     background-color: rgb(69 72 72);
     justify-content: space-between;
@@ -314,7 +314,153 @@ header{
     display: none;
   }
 } 
-  
- 
-  
-/*////////////Main Of Search page Start Here//////////////  */
+
+.Search_container{
+  margin-left: 42px;
+  margin-right: 40px;
+}
+ .Search_container select,
+  .Search_container input[type="text"],
+  .Search_container input[type="submit"] {
+      width: 100%;
+      padding: 8px;
+      box-sizing: border-box;
+  }
+
+
+.carousel-control-next-icon{
+  margin-bottom: 101px;
+  width: 50px;
+  font-size: 20px;
+}
+.carousel-control-next-icon {
+  background-image: url("assets/right-white-arrow.png") !important;
+  width: 11px;
+  height: 24px;
+  opacity: 1;
+}
+.logo-and-text >img{
+  margin-top: -18px;
+}
+.logo-and-text>h6{
+  margin-top: -8px;
+}
+p{
+  margin-top: -12px;
+  margin-bottom: 25px;
+}
+input[type="checkbox"] {
+  margin-right: 5px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  border: 1px solid #d94f5a;
+  border-radius: 3px;
+  outline: none;
+  cursor: pointer;
+  background-color: #fff;
+}
+
+
+input[type="checkbox"]:checked::before {
+  content: '\2713';
+  display: inline-block;
+  font-size: 20px;
+  width: 16px;
+  height: 16px;
+  color: rgb(255, 255, 255);
+  background-color: #d94f5a;
+  line-height: 20px;
+  border-radius: 9%;
+}
+.mob_cont{
+display: none;
+}
+/* For Mobile View Code Start here */
+@media only screen and (max-width: 480px) {
+  .Search_container{
+    display: none;
+  }
+  .mob_cont{
+    margin-left: 40px;
+    margin-right: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .editicon img{
+    margin-left: 5px;
+    margin-right: 10px;
+    border: 2px solid #4cb1c3;
+    padding: 4px;
+    border-radius: 4px;
+
+  }
+  .more_flt_btn{
+    margin-top: -20px;
+    margin-left: 12px;
+    margin-top: 0px !important;
+  }
+}
+.text_res h5{
+  font-size: 14px;
+  color: #4cb1c3;
+}
+@media only screen and (min-width: 1859px) {
+  .image_with_text img {
+    max-width: 200%;
+    width: 650px;
+    height: 280px;
+  }
+
+}
+@media only screen and (min-width: 2154px) {
+  .image_with_text img {
+    max-width: 250%;
+    width: 750px;
+    height: 280px;
+  }
+
+}
+@media only screen and (min-width: 2455px) {
+  .image_with_text img {
+    max-width: 300%;
+    width: 850px;
+    height: 280px;
+  }
+
+}
+.num_container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 50px;
+  margin-top: 20px;
+}
+.num1{
+  border: 0px solid rgb(69 72 72);
+  border-radius: 3px;
+  padding: 12px;
+  width: 35px;
+  height: 40px;
+}
+.num2{
+  background-color: #4cb1c3;
+  color: #fff;
+}
+.NM3:hover{
+  background-color: #4cb1c3;
+  color: #fff;
+  cursor: pointer;
+}
+.faq>h4{
+  text-transform: uppercase;
+}
+.contact_us_fot>h4{
+  text-transform: uppercase;
+}
+.footer_main{
+  padding-right: 40px !important;
+}
