--- a/SearchList.css
+++ b/SearchList.css
@@ -28,6 +28,7 @@ header{
         color: #4cb1c3;
         border: 1px solid #4cb1c3;
         text-decoration: none;
+        border-radius: 3px;
     }
     .rightsection h4 a:hover{
         text-decoration: none;
@@ -36,8 +37,8 @@ header{
         background-color: #fff;
     }
     .header_container{
-        margin-left: 50px;
-        margin-right: 50px;
+        margin-left: 14px;
+        margin-right: 14px;
         overflow: hidden;
         display: flex;
         align-items: center;
@@ -97,50 +98,132 @@ header{
         img .chekbtn{
             width: 100px;
         }
+        .table1{
+          display: none;
+        }
         
     }
     /* ///////////////Result PAge///////////// */
+
     #options_of_result {
       display: flex;
-      justify-content: space-between;
-      padding: 20px;
-  }
+      flex-direction: column-reverse;
+      flex-wrap: wrap;
+      align-content: stretch;
+      margin-left: 48px;
+      margin-right: 59px;
+      margin-top: 20px;
+    }
+    #select option[value="Animal Conversion"] {
+      color: rgb(97, 97, 97);
+    }
 
-  .Search_container {
+    table {
       width: 100%;
-  }
+    }
 
-  .Search_container input[type="checkbox"] {
-      margin-right: 5px;
-  }
+    .narrow-table {
+      display: none;
+    }
 
-  .Search_container select,
-  .Search_container input[type="text"],
-  .Search_container input[type="submit"] {
-      width: 100%;
-      padding: 8px;
-      box-sizing: border-box;
-  }
-
-
-
-    input[type="checkbox"] {
-      appearance: none;
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      width: 16px;
-      height: 16px;
-      border: 2px solid #4cb1c3;
+    #select {
+      width: 90%;
+      height: 35px;
+      border: solid 1px;
       border-radius: 3px;
-      outline: none;
-      cursor: pointer;
-      vertical-align: middle;
-      margin-right: 8px;
-  }
+    }
 
-  input[type="checkbox"]:checked {
-      background-color: #4cb1c3;
-      border-color: #4cb1c3;
+    #textbox {
+      width: 90%;
+      height: 35px;
+      border: solid 1px;
+      border-radius: 3px;
+    }
+
+    #chechboxes div {
+      display: flex;
+      margin-right: 15px;
+    }
+
+    #chechboxes input {
+      accent-color: rgb(229, 59, 81);
+    }
+
+    .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
+      background-color: red !important;
+    }
+
+    #first-column {
+      width: 30%;
+      
+    }
+
+    #second-column {
+      width: 30%;
+    }
+
+    #third-column {
+      width: 30%;
+    }
+
+    #first-row {
+      color: rgb(0, 168, 190);
+    }
+
+    #full-button {
+      border: solid 1px rgb(0, 168, 190);
+      border-radius: 3px;
+      color: rgb(0, 168, 190);
+      background-color: transparent;
+      height: 35px;
+      width: 150px;
+      text-align: center;
+    }
+
+    #full-button .badge {
+      position: relative;
+      top: -40px;
+      right: -70px;
+      padding: 5px 10px;
+      border-radius: 50%;
+      background: rgb(0, 168, 190);
+      color: white;
+    }
+
+    #full-button #text {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    #tablet-button {
+      display: none;
+    }
+  
+  .search-main-container {
+    width: 90%;
+    margin-left: 5%;
+  }
+  
+  .search-details {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+  }
+  
+  .search-details #first {
+    font-size: 16px;
+  }
+  
+  .search-details #second {
+    font-size: 14px;
+    margin-right: 122px;
+    margin-bottom: 5px;
+  }
+  
+  .search-details #second select {
+    font-size: 14px;
+    height: 30px;
   }
 
 
@@ -157,7 +240,7 @@ header{
   .result329 h6,
   .sortby h6 {
     font-size: 14px;
-    font-weight: 400;
+    font-weight:100;
   }
   
   .sortby {
@@ -190,7 +273,7 @@ header{
   }
   .top-left {
     position: absolute;
-    top: 8px;
+    top: 1px;
     left: 16px;
   }
   .top-left h6{
@@ -236,13 +319,16 @@ header{
     align-items: center; 
     margin-bottom: 5px; 
   }
+  .logo-and-text h6{
+    font-size: 12px !important;
+  }
 
   .bottom_design {
     margin-left: 0;
   }
   
   .bottom_design h5 {
-    font-size: 14px;
+    font-size: 10px;
   }
   
   .bottom_design h6 {
@@ -384,8 +470,9 @@ display: none;
     display: none;
   }
   .mob_cont{
-    margin-left: 40px;
-    margin-right: 40px;
+    width: 100%;
+    margin-left: 5px;
+    margin-right: 5pxpx;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -393,7 +480,7 @@ display: none;
   .editicon img{
     margin-left: 5px;
     margin-right: 10px;
-    border: 2px solid #4cb1c3;
+    border: 1px solid #4cb1c3;
     padding: 4px;
     border-radius: 4px;
 
@@ -401,6 +488,8 @@ display: none;
   .more_flt_btn{
     margin-top: -20px;
     margin-left: 12px;
+    border-radius: 3px;
+    border: 1px solid #4cb1c3 !important;
     margin-top: 0px !important;
   }
 }
