--- a/SearchList.css
+++ b/SearchList.css
@@ -112,7 +112,7 @@ header{
       align-content: stretch;
       margin-left: 48px;
       margin-right: 59px;
-      margin-top: 20px;
+    
     }
     #select option[value="Animal Conversion"] {
       color: rgb(97, 97, 97);
@@ -120,6 +120,7 @@ header{
 
     table {
       width: 100%;
+      margin-top: 20px;
     }
 
     .narrow-table {
@@ -199,6 +200,29 @@ header{
     #tablet-button {
       display: none;
     }
+    #textbox{
+      padding-left: 9px;
+      color: #333333;
+      font-weight: 100;
+    }
+   input.hwchx{
+    width: 40px;
+    height: 40px;
+   }
+   #select{
+    padding-left: 5px;
+    padding-right: 5px;
+
+   }
+   @media only screen and (max-width: 832px){
+    #full-button{
+      display: none;
+    }
+   }
+   /*  */
+   
+
+    /* Third Section */
   
   .search-main-container {
     width: 90%;
@@ -225,6 +249,10 @@ header{
     font-size: 14px;
     height: 30px;
   }
+  #full-button-tab{
+    
+  }
+
 
 
 /*////////////Main Of Search page Start Here//////////////  */
@@ -295,7 +323,7 @@ header{
   .image_with_text img {
     max-width: 100%;
     width: 450px;
-    height: 280px;
+    height: 200px;
   }
   
   .grid-item h5 {
@@ -345,7 +373,7 @@ header{
   
     .image_with_text img {
       width: 100%;
-      height: 280px;
+      height: 200px;
     }
   }
   
@@ -362,14 +390,14 @@ header{
     .image_with_text img {
         max-width: 150%;
         width: 500px;
-        height: 280px;
+        height: 200px;
       }
   } 
   @media only screen and (min-width: 1730px) {
     .image_with_text img {
         max-width: 150%;
         width: 550px;
-        height: 280px;
+        height: 200px;
       }
   } 
 
@@ -501,7 +529,7 @@ display: none;
   .image_with_text img {
     max-width: 200%;
     width: 650px;
-    height: 280px;
+    height: 200px;
   }
 
 }
@@ -553,3 +581,79 @@ display: none;
 .footer_main{
   padding-right: 40px !important;
 }
+@media only screen and (max-width: 1115px){
+  .image_with_text img {
+    max-width: 300%;
+    width: 850px;
+    height: 150px;
+  }
+}
+@media only screen and (max-width: 820px){
+  .image_with_text img {
+    max-width: 300%;
+    width: 850px;
+    height: 100px;
+  }
+  p{
+    font-size: 10px !important;
+  }
+}
+@media only screen and (max-width: 480px){
+  .image_with_text img {
+    max-width: 300%;
+    /* width: 850px; */
+    height: 200px !important;
+  }
+}
+.fill-tab{
+  display: none;
+}
+@media only screen and (max-width: 828px) and (min-width: 480px){
+  .fill-tab{
+    display: flex !important;
+    color: #4cb1c3;
+    background-color: #fff;
+    padding: 5px;
+    text-align: center;
+    border: 1px solid #4cb1c3;
+  }
+  .badge{
+    margin-top: -14px;
+    margin-right: -12px;
+  }
+  #text{
+    padding-left: 6px;
+  }
+}
+.bgclr{
+  background-color: #fafafa;
+  width: 100%;
+  height: 100px;
+}
+@media  only screen and (max-width: 480px){
+  .mob_cont{
+    margin-top: 12px;
+  }
+  .text_res>h5{
+    font-size: 10px;
+    margin-left: -27px;
+  }
+  .bgclr{
+    background-color: #fafafa;
+    width: 100%;
+    height: 50px;
+  }
+  .more_flt_btn{
+    margin-right: -27px;
+  }
+  .mobile_badge{
+    right: -32px !important;
+  }
+  .sortby {
+    margin-right: -40px ;
+  }
+  #mob_329{
+    margin-left: -32px !important;
+  }
+
+} 
