--- a/HomeList.css
+++ b/HomeList.css
@@ -14,6 +14,38 @@ background-attachment: fixed;
 background-size: cover;
 background-color: #464646;
 opacity: 1;
+box-shadow: inset   0px 0px 550px 90px rgb(10, 8, 8);
+}
+/* Seeting for Bg */
+.imageupper{
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.image_bng{
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.image_sh{
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.content_bg{
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+#bgd_image{
+  width: 100vw;
+  height: 80vh;
+}
+#image_bng_shadow{
+  width: 100vw;
+  height: 80vh;
 }
 .image_main h2{
     margin-top: 300px;
@@ -147,17 +179,27 @@ td h4{
 td input{   
      border: none;
      outline: none;
-     background-color: rgb(229 59 81);
+     /* background-color: rgb(229 59 81); */
      color: #ffffff;
+     background: transparent;
 }
 .search_btn{
+    color: #fff;
     background-color: rgb(229 59 81);
     cursor: pointer;
     font-size: 21px;
+    border: 2px solid rgb(249, 249, 249);
     
+}
+#Anywhere_::placeholder{
+  color: #ffffff;
+  
 }
 .Setting_table_inside{
   border: 2px solid #ffffff;
+  width: 30%;
+  /* align-items: center;
+  justify-content: center; */
 }
 #colour1{
     color: hwb(0 100% 0%);
@@ -177,7 +219,8 @@ select{
 }
 .Search_table{
     border-collapse:separate;
-    border-spacing: 0 25px;
+    border-spacing: 0 15px;
+    width: 70%;
 }
 .down_arrow_svg{
     width: 10px;
@@ -193,6 +236,7 @@ td>div>svg{
 }
 .btn{
     font-size: 21px;
+    color: #fff;
 }
 #mydiv{
     animation: animateSectionBackground  infinite 22s ease-in;
@@ -204,13 +248,13 @@ td>div>svg{
 }
 
 
-@keyframes animateSectionBackground {
+/* @keyframes animateSectionBackground {
     00% { background-image: url(assets/banner-img.jpg); }
     20% { background-image: url(assets/banner2.jpg); }
     40% { background-image: url(assets/banner3.jpg); }
     60% { background-image: url(assets/banner4.jpg); }
     80% { background-image: url(assets/banner5.jpg); }
-  }
+  } */
 
   @media only screen and (max-width: 501px) {
     .Setting_table_inside{
@@ -322,7 +366,6 @@ td>div>svg{
     background-color: rgb(229 59 81);
     border: none;
     font-size: 21px;
-    padding-left: 50px;
     cursor: pointer;
   }
   .anywhere_mobile{
@@ -331,10 +374,11 @@ td>div>svg{
 
   }
  /* Treading Projects */
- .main_heading_project{
+ .main_heading_project h3{
     color: rgb(66 169 190);
     font-size: 36px;
     padding-bottom: 22px;
+    font-weight: 600;
   }
   .main_treading_pr{
     margin-top: 80px;
@@ -402,7 +446,7 @@ td>div>svg{
  flex-direction: column;
  justify-content: end;
  align-items: flex-start;
- padding-top: 240px;
+ padding-top: 160px;
  
   }
   .content >h5{
@@ -498,7 +542,7 @@ td>div>svg{
     flex-direction: column;
     justify-content: right;
     margin-left: 8px;
-    margin-top: 100px;
+    margin-top: 115px;
   }
   .content_fd >h4{
     text-transform: uppercase;
@@ -506,6 +550,7 @@ td>div>svg{
     margin-top: 10px;
     margin-bottom: 4px;
     font-size: 21px;
+    margin-top: -4px;
   }
   .content_fd >h6{
     color: rgb(229 59 81);
@@ -985,6 +1030,309 @@ td>div>svg{
 @media  only screen and (min-width: 1353){
   .owl-next{
     right: -15px !important;
+  }
+}
+
+
+/* 
+@media only screen and (max-width: 2600px){
+  #bgd_image{
+    width: 100vw;
+    height: 50vh;
+  }
+  #image_bng_shadow{
+    width: 100vw;
+    height: 50vh;
+  }
+}
+@media only screen and (max-width: 2580px){
+  #bgd_image{
+    width: 100vw;
+    height: 50vh;
+  }
+  #image_bng_shadow{
+    width: 100vw;
+    height: 50vh;
+  }
+}
+@media only screen and (max-width: 2480px){
+  #bgd_image{
+    width: 100vw;
+    height: 50vh;
+  }
+  #image_bng_shadow{
+    width: 100vw;
+    height: 50vh;
+  }
+}
+
+@media only screen and (max-width: 2380px){
+  #bgd_image{
+    width: 100vw;
+    height: 60vh;
+  }
+  #image_bng_shadow{
+    width: 100vw;
+    height: 60vh;
+  }
+}
+
+@media only screen and (max-width: 2280px){
+  #bgd_image{
+    width: 100vw;
+    height: 50vh;
+  }
+  #image_bng_shadow{
+    width: 100vw;
+    height: 50vh;
+  }
+}
+
+@media only screen and (max-width: 2180px){
+  #bgd_image{
+    width: 100vw;
+    height: 50vh;
+  }
+  #image_bng_shadow{
+    width: 100vw;
+    height: 50vh;
+  }
+}
+
+@media only screen and (max-width: 2080px){
+  #bgd_image{
+    width: 100vw;
+    height: 60vh;
+  }
+  #image_bng_shadow{
+    width: 100vw;
+    height: 60vh;
+  }
+}
+
+@media only screen and (max-width: 1980px){
+  #bgd_image{
+    width: 100vw;
+    height: 60vh;
+  }
+  #image_bng_shadow{
+    width: 100vw;
+    height: 60vh;
+  }
+}
+
+@media only screen and (max-width: 1880px){
+  #bgd_image{
+    width: 100vw;
+    height: 60vh;
+  }
+  #image_bng_shadow{
+    width: 100vw;
+    height: 60vh;
+  }
+}
+
+@media only screen and (max-width: 1800px){
+  #bgd_image{
+    width: 100vw;
+    height: 60vh;
+  }
+  #image_bng_shadow{
+    width: 100vw;
+    height: 60vh;
+  }
+}
+@media only screen and (max-width: 1680px){
+  #bgd_image{
+    width: 100vw;
+    height: 70vh;
+  }
+  #image_bng_shadow{
+    width: 100vw;
+    height: 70vh;
+  }
+}
+@media only screen and (max-width: 1580px){
+  #bgd_image{
+    width: 100vw;
+    height: 75vh;
+  }
+  #image_bng_shadow{
+    width: 100vw;
+    height: 75vh;
+  }
+}
+@media only screen and (max-width: 1480px){
+  #bgd_image{
+    width: 100vw;
+    height: 85vh;
+  }
+  #image_bng_shadow{
+    width: 100vw;
+    height: 85vh;
+  }
+}
+@media only screen and (max-width: 1380px){
+  #bgd_image{
+    width: 100vw;
+    height: 85vh;
+  }
+  #image_bng_shadow{
+    width: 100vw;
+    height: 85vh;
+  }
+}
+@media only screen and (max-width: 1280px){
+  #bgd_image{
+    width: 100vw;
+    height: 100vh;
+  }
+  #image_bng_shadow{
+    width: 100vw;
+    height: 100vh;
+  }
+} */
+
+
+
+
+
+@media only screen and (max-width: 900px){
+  #bgd_image{
+    width: 100vw;
+    height: 80vh;
+  }
+  #image_bng_shadow{
+    width: 100vw;
+    height: 80vh;
+  }
+}
+
+@media only screen and (max-width: 769px){
+  #bgd_image{
+    width: 100vw;
+    height: 110vh !important;
+  }
+  #image_bng_shadow{
+    width: 100vw;
+    height: 110vh !important;
+  }
+}
+@media only screen and (max-width: 480px){
+  #bgd_image{
+    width: 100vw;
+    height: 90vh !important;
+  }
+  #image_bng_shadow{
+    width: 100vw;
+    height: 90vh !important;
+  }
+  .main_heading_project h3{
+    font-size: 26px;
+  }
+}
+@media only screen and (max-width: 768px){
+  #Image_width_adjust_fd{
+    width: 195px;
+  }
+  #Image_width_adjust_shadwo_fd{
+    width: 195px;
+  }
+  #Image_width_adjust_maf{
+    width: 200px;
+  }
+  #Image_width_adjust_shadwo_maf{
+  width: 200px;
+  }
+}
+@media only screen and (max-width: 1282px) and (min-width: 770px)   {
+  #Image_width_adjust{
+    width: 280px;
+    height: 280px;
+    
+  }
+  #Image_width_adjust_shadwo img {
+    width: 280px;
+    height: 280px;
+  }
+  #Image_width_adjust_fd{
+    width: 181px;
+    height: 120px;
+  }
+  #Image_width_adjust_shadwo_fd{
+    width: 181px;
+    height: 120px;
+  }
+  #Image_width_adjust_maf{
+    width: 218px;
+  }
+  #Image_width_adjust_shadwo_maf{
+  width: 218px;
+  }
+}
+
+@media only screen and (max-width: 769px) and (min-width: 481px){
+  #Image_width_adjust{
+    width: 340px;
+    height: 280px;
+    
+  }
+  #Image_width_adjust_shadwo img {
+    width: 340px;
+    height: 280px;
+  }
+  #Image_width_adjust_fd{
+    width: 223px;
+    height: 170px;
+  }
+  #Image_width_adjust_shadwo_fd{
+    width: 223px;
+    height: 170px;
+  }
+  #Image_width_adjust_maf{
+    width: 224px;
+  }
+  #Image_width_adjust_shadwo_maf{
+  width: 224px;
+  }
+  .content_maf{
+    margin-top: 140px;
+  }
+  .content_maf>h6{
+    font-size: 13px;
+  }
+  .content_maf>h5{
+    font-size: 14px;
+  }
+  .content_maf>h4{
+    color: rgb(229 59 81);
+    background-color: #ffffff;
+    border-radius: 2px;
+    width: fit-content;
+    padding-left: 2px;
+    padding-right: 2px;
+    font-size: 22px;
+  }
+  .content_fd>h4{
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 480px) and (min-width: 320px) {
+  #Image_width_adjust{
+    width: 480px;
+    height: 280px;
+    
+  }
+  #Image_width_adjust_shadwo img {
+    width: 480px;
+    height: 280px;
+  }
+  #Image_width_adjust_maf{
+    width: 480px;
+  }
+  #Image_width_adjust_shadwo_maf{
+  width: 480px;
   }
 }
 
