--- a/HomeList.css
+++ b/HomeList.css
@@ -158,6 +158,8 @@ table, td {
     width: 500px;
     text-align: center;
     font-size: 20px;
+    border-collapse: collapse;
+    
 } 
 td{
     border: 2px solid rgb(255, 255, 255);
@@ -248,13 +250,13 @@ td>div>svg{
 }
 
 
-/* @keyframes animateSectionBackground {
+@keyframes animateSectionBackground {
     00% { background-image: url(assets/banner-img.jpg); }
     20% { background-image: url(assets/banner2.jpg); }
     40% { background-image: url(assets/banner3.jpg); }
     60% { background-image: url(assets/banner4.jpg); }
     80% { background-image: url(assets/banner5.jpg); }
-  } */
+  }
 
   @media only screen and (max-width: 501px) {
     .Setting_table_inside{
@@ -281,6 +283,8 @@ td>div>svg{
         margin-top: 78px;
         text-align: center;
         color: #fafafa;
+        margin-left: 12px;
+        margin-right: 12px;
     }
    .table_mobile{
     width: 100%;
@@ -291,7 +295,7 @@ td>div>svg{
    .table_mobile td, .table_mobile th{
     padding: 12px 15px;
     /* border: 1px solid rgb(0, 0, 0); */
-    border-radius: 2px;
+    border-radius: 0px;
     font-size: 16px;
    margin: 23px; 
    }
@@ -1033,170 +1037,6 @@ td>div>svg{
   }
 }
 
-
-/* 
-@media only screen and (max-width: 2600px){
-  #bgd_image{
-    width: 100vw;
-    height: 50vh;
-  }
-  #image_bng_shadow{
-    width: 100vw;
-    height: 50vh;
-  }
-}
-@media only screen and (max-width: 2580px){
-  #bgd_image{
-    width: 100vw;
-    height: 50vh;
-  }
-  #image_bng_shadow{
-    width: 100vw;
-    height: 50vh;
-  }
-}
-@media only screen and (max-width: 2480px){
-  #bgd_image{
-    width: 100vw;
-    height: 50vh;
-  }
-  #image_bng_shadow{
-    width: 100vw;
-    height: 50vh;
-  }
-}
-
-@media only screen and (max-width: 2380px){
-  #bgd_image{
-    width: 100vw;
-    height: 60vh;
-  }
-  #image_bng_shadow{
-    width: 100vw;
-    height: 60vh;
-  }
-}
-
-@media only screen and (max-width: 2280px){
-  #bgd_image{
-    width: 100vw;
-    height: 50vh;
-  }
-  #image_bng_shadow{
-    width: 100vw;
-    height: 50vh;
-  }
-}
-
-@media only screen and (max-width: 2180px){
-  #bgd_image{
-    width: 100vw;
-    height: 50vh;
-  }
-  #image_bng_shadow{
-    width: 100vw;
-    height: 50vh;
-  }
-}
-
-@media only screen and (max-width: 2080px){
-  #bgd_image{
-    width: 100vw;
-    height: 60vh;
-  }
-  #image_bng_shadow{
-    width: 100vw;
-    height: 60vh;
-  }
-}
-
-@media only screen and (max-width: 1980px){
-  #bgd_image{
-    width: 100vw;
-    height: 60vh;
-  }
-  #image_bng_shadow{
-    width: 100vw;
-    height: 60vh;
-  }
-}
-
-@media only screen and (max-width: 1880px){
-  #bgd_image{
-    width: 100vw;
-    height: 60vh;
-  }
-  #image_bng_shadow{
-    width: 100vw;
-    height: 60vh;
-  }
-}
-
-@media only screen and (max-width: 1800px){
-  #bgd_image{
-    width: 100vw;
-    height: 60vh;
-  }
-  #image_bng_shadow{
-    width: 100vw;
-    height: 60vh;
-  }
-}
-@media only screen and (max-width: 1680px){
-  #bgd_image{
-    width: 100vw;
-    height: 70vh;
-  }
-  #image_bng_shadow{
-    width: 100vw;
-    height: 70vh;
-  }
-}
-@media only screen and (max-width: 1580px){
-  #bgd_image{
-    width: 100vw;
-    height: 75vh;
-  }
-  #image_bng_shadow{
-    width: 100vw;
-    height: 75vh;
-  }
-}
-@media only screen and (max-width: 1480px){
-  #bgd_image{
-    width: 100vw;
-    height: 85vh;
-  }
-  #image_bng_shadow{
-    width: 100vw;
-    height: 85vh;
-  }
-}
-@media only screen and (max-width: 1380px){
-  #bgd_image{
-    width: 100vw;
-    height: 85vh;
-  }
-  #image_bng_shadow{
-    width: 100vw;
-    height: 85vh;
-  }
-}
-@media only screen and (max-width: 1280px){
-  #bgd_image{
-    width: 100vw;
-    height: 100vh;
-  }
-  #image_bng_shadow{
-    width: 100vw;
-    height: 100vh;
-  }
-} */
-
-
-
-
-
 @media only screen and (max-width: 900px){
   #bgd_image{
     width: 100vw;
@@ -1333,6 +1173,12 @@ td>div>svg{
   }
   #Image_width_adjust_shadwo_maf{
   width: 480px;
+  }
+  .header_container{
+    border: 0px ;
+  }
+  header{
+    border-bottom: 1px solid rgb(255, 255, 255);
   }
 }
 
