--- a/SearchList.css
+++ b/SearchList.css
@@ -5,6 +5,9 @@
     font-optical-sizing: auto;
     
 }
+#Image_conatiner{
+  margin-top: 12px;
+}
 /* Header Part Start From Here */
 header{
     width: 100%;
@@ -20,6 +23,7 @@ header{
     }
     .how_its_work{
         margin-right: 20px;
+        font-weight: 700;
     }
     .rightsection h4 a{
         display: inline;
@@ -59,6 +63,7 @@ header{
     .header_right_part a{
         color: #4cb1c3;
         text-decoration: none;
+        font-weight: 700;
     }
     .chekbtn{
         float: right;
@@ -115,7 +120,7 @@ header{
     
     }
     #select option[value="Animal Conversion"] {
-      color: rgb(97, 97, 97);
+      color: #655f5f
     }
 
     table {
@@ -139,6 +144,11 @@ header{
       height: 35px;
       border: solid 1px;
       border-radius: 3px;
+      outline: none;
+    }
+    #textbox::placeholder{
+      color: #655f5f;
+      
     }
 
     #chechboxes div {
@@ -363,7 +373,7 @@ header{
     font-size: 12px;
   }  
   /* Styles for smaller screens */
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 750px) {
     .grid-container {
       grid-template-columns: auto auto;
       column-gap: 20px;
@@ -373,7 +383,7 @@ header{
   
     .image_with_text img {
       width: 100%;
-      height: 200px;
+      height: 250px;
     }
   }
   
@@ -388,16 +398,16 @@ header{
   }
   @media only screen and (min-width: 1552px) {
     .image_with_text img {
-        max-width: 150%;
+        max-width: 100%;
         width: 500px;
         height: 200px;
       }
   } 
   @media only screen and (min-width: 1730px) {
     .image_with_text img {
-        max-width: 150%;
+        max-width: 100%;
         width: 550px;
-        height: 200px;
+        height: 400px;
       }
   } 
 
@@ -423,7 +433,7 @@ header{
     color: #ffffff;
   }
   /* Remove Footer Of Site */
-  @media  only screen and (max-width: 760px){
+  @media  only screen and (max-width: 770px){
   footer{
     display: none;
   }
@@ -509,7 +519,7 @@ display: none;
     margin-left: 5px;
     margin-right: 10px;
     border: 1px solid #4cb1c3;
-    padding: 4px;
+    padding: 8px;
     border-radius: 4px;
 
   }
@@ -524,18 +534,19 @@ display: none;
 .text_res h5{
   font-size: 14px;
   color: #4cb1c3;
+  font-weight: 600;
 }
 @media only screen and (min-width: 1859px) {
   .image_with_text img {
-    max-width: 200%;
+    max-width: 100%;
     width: 650px;
-    height: 200px;
+    height: 250px;
   }
 
 }
 @media only screen and (min-width: 2154px) {
   .image_with_text img {
-    max-width: 250%;
+    max-width: 100%;
     width: 750px;
     height: 280px;
   }
@@ -543,9 +554,9 @@ display: none;
 }
 @media only screen and (min-width: 2455px) {
   .image_with_text img {
-    max-width: 300%;
+    max-width: 100%;
     width: 850px;
-    height: 280px;
+    height: 310px;
   }
 
 }
@@ -583,16 +594,16 @@ display: none;
 }
 @media only screen and (max-width: 1115px){
   .image_with_text img {
-    max-width: 300%;
+    max-width: 100%;
     width: 850px;
-    height: 150px;
+    height: 250px;
   }
 }
 @media only screen and (max-width: 820px){
   .image_with_text img {
-    max-width: 300%;
-    width: 850px;
-    height: 100px;
+    max-width: 100%;
+    width: 250px;
+    height: 150px;
   }
   p{
     font-size: 10px !important;
@@ -600,9 +611,9 @@ display: none;
 }
 @media only screen and (max-width: 480px){
   .image_with_text img {
-    max-width: 300%;
-    /* width: 850px; */
-    height: 200px !important;
+    max-width: 100%;
+    width: 438px;
+    height: 250px !important;
   }
 }
 .fill-tab{
@@ -635,13 +646,13 @@ display: none;
     margin-top: 12px;
   }
   .text_res>h5{
-    font-size: 10px;
+    font-size: 21px;
     margin-left: -27px;
   }
   .bgclr{
     background-color: #fafafa;
     width: 100%;
-    height: 50px;
+    height: auto;
   }
   .more_flt_btn{
     margin-right: -27px;
@@ -653,7 +664,11 @@ display: none;
     margin-right: -40px ;
   }
   #mob_329{
-    margin-left: -32px !important;
+    margin-left: -41px !important;
   }
 
 } 
+#select{
+  outline: none;
+  color: #333333;
+}
